--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "debug": "^4.1.1",
     "react": "^16.8.1",
-    "react-dom": "^16.8.1"
+    "react-dom": "^16.8.1",
+    "xss": "^1.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
