--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "debug": "^4.1.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
     "xss": "^1.0.3"
   },
   "devDependencies": {
